Cambio los htmls por nombres más apropiados

--- a/html/atm.htm
+++ b/html/atm.htm
@@ -2,16 +2,16 @@
 <!-- Generado por Tecnología Avanquest v:7.1. Para su mayor información, por favor visite: http://www.avanquest.com -->
 <html lang="es">
 <head>
-	<title> Serv3 </title>
+	<title> Serv7 </title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
 	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
 	<link rel="stylesheet" href="css/patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
-	<link rel="stylesheet" href="css/patrodent_008_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
+	<link rel="stylesheet" href="css/atm.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 	<script src="js/patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
-	<script src="js/patrodent_008_a.js" type="text/javascript"></script>		<!--// Motion Script //-->
+	<script src="js/atm.js" type="text/javascript"></script>		<!--// Motion Script //-->
 </head>
 
 
@@ -67,31 +67,31 @@
 	<span id="e11" class="barra barra2"></span>
 	<a href="#" onmouseover="OnWeOver(0,0,0,IDP[1],Img10,0,1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img10,0,0)">
 		<img id="e10" name="e10" src="./images/b-norm2.gif" title="" alt="./images/b-norm2.gif" align="right" border="0"></a>
-	<div id="e9" class="cc80">
-		ODONTOPEDIATRIA
+	<div id="e9" class="cc122">
+		ATM (Problemas de Articulación)
 	</div>
 	<div id="e8" class="info">
-		La odontología infantil constituye una especialidad, porque el trato de los niños así como su tratamiento son distintos de los de los adultos.<br> 
+		Deberán ustedes saber que muchos dolores de cabeza, contracturas cervicales, alteraciones posturales etc., pueden ser causados por una mordida desequilibrada.<br> 
 		<br> 
-		Lo fundamental es conseguir la total confianza del niño para que colabore como paciente y esto requiere un acercamiento progresivo y unos tiempos mayores que en el caso de los adultos.<br> 
+		El dolor facial y de la mandíbula por la mañana puede indicar un bruxismo nocturno (rechinar los dientes). Los ruidos de la articulación temporo-mandibular, pueden indicar un problema estructural de la articulación.<br> 
 		<br> 
-		La Dra. Patrocinio Gómez está muy habituada, debido a su experiencia, a tratar a los pequeños pacientes con la dedicación y cuidado que esta delicada relación terapéutica requiere.
+		En muchos casos un simple balanceo de la mordida (ajuste oclusal) puede dar un descanso inmediato. El método mas usado para conseguir esta relajación inmediata es la férula de descarga. Es un aparato removible de acrílico que se diseña a medida, normalmente en los dientes superiores, y se ajusta a una posición articular fisiológica. Los dientes opuestos golpean en el acrílico creando una mordida muy confortable y atraumática. 
 	</div>
-	<span id="e7" class="cc81"></span>
+	<span id="e7"></span>
 	<div id="e6" class="quien menu">
-		<a href="patrodent_002.htm">
+		<a href="quien_soy.htm">
 		QUIEN SOY      </a>
 	</div>
 	<div id="e5" class="servicios menu">
-		<a href="patrodent_005.htm">
+		<a href="servicios.htm">
 		SERVICIOS      </a>
 	</div>
 	<div id="e4" class="situacion menu">
-		<a href="patrodent_003.htm">
+		<a href="situacion.htm">
 		SITUACION     </a>
 	</div>
 	<div id="e3" class="instalaciones menu">
-		<a href="patrodent_004.htm">
+		<a href="instalaciones.htm">
 		INSTALACIONES     </a>
 	</div>
 	<div id="e2" class="contactar menu">
@@ -99,7 +99,7 @@
 		CONTACTAR    </a>
 	</div>
 	<div id="e1" class="volver">
-		<a href="patrodent_005.htm">
+		<a href="servicios.htm">
 		Volver      </a>
 	</div>
 </div>
