--- a/html/periodoncia.htm
+++ b/html/periodoncia.htm
@@ -9,9 +9,9 @@
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
 	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
 	<link rel="stylesheet" href="css/patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
-	<link rel="stylesheet" href="css/patrodent_009_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
+	<link rel="stylesheet" href="css/periodoncia.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 	<script src="js/patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
-	<script src="js/patrodent_009_a.js" type="text/javascript"></script>		<!--// Motion Script //-->
+	<script src="js/periodoncia.js" type="text/javascript"></script>		<!--// Motion Script //-->
 </head>
 
 
@@ -79,19 +79,19 @@
 	<span id="e8"></span>
 	<span id="e7"></span>
 	<div id="e6" class="quien menu">
-		<a href="patrodent_002.htm">
+		<a href="quien_soy.htm">
 		QUIEN SOY      </a>
 	</div>
 	<div id="e5" class="servicios menu">
-		<a href="patrodent_005.htm">
+		<a href="servicios.htm">
 		SERVICIOS      </a>
 	</div>
 	<div id="e4" class="situacion menu">
-		<a href="patrodent_003.htm">
+		<a href="situacion.htm">
 		SITUACION     </a>
 	</div>
 	<div id="e3" class="instalaciones menu">
-		<a href="patrodent_004.htm">
+		<a href="instalaciones.htm">
 		INSTALACIONES     </a>
 	</div>
 	<div id="e2" class="contactar menu">
@@ -99,7 +99,7 @@
 		CONTACTAR    </a>
 	</div>
 	<div id="e1" class="volver">
-		<a href="patrodent_005.htm">
+		<a href="servicios.htm">
 		Volver      </a>
 	</div>
 </div>
