--- a/html/blanqueamiento.htm
+++ b/html/blanqueamiento.htm
@@ -2,16 +2,16 @@
 <!-- Generado por Tecnología Avanquest v:7.1. Para su mayor información, por favor visite: http://www.avanquest.com -->
 <html lang="es">
 <head>
-	<title> Serv6 </title>
+	<title> Serv2 </title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
 	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
 	<link rel="stylesheet" href="css/patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
-	<link rel="stylesheet" href="css/patrodent_011_p.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
+	<link rel="stylesheet" href="css/blanqueamiento.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 	<script src="js/patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
-	<script src="js/patrodent_011_a.js" type="text/javascript"></script>		<!--// Motion Script //-->
+	<script src="js/blanqueamiento.js" type="text/javascript"></script>		<!--// Motion Script //-->
 </head>
 
 
@@ -67,34 +67,31 @@
 	<span id="e12" class="barra barra2"></span>
 	<a href="#" onmouseover="OnWeOver(0,0,0,IDP[1],Img11,0,1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img11,0,0)">
 		<img id="e11" name="e11" src="./images/b-norm2.gif" title="" alt="./images/b-norm2.gif" align="right" border="0"></a>
-	<div id="e10" class="cc112">
-		IMPLANTES
+	<div id="e10" class="cc69">
+		ESTETICA DENTAL. BLANQUEAMIENTO
 	</div>
 	<div id="e9" class="info">
-		Los implantes dentales son fijaciones de titanio que se colocan en el maxilar o en la mandíbula para sustituir los dientes ausentes.<br> 
-		<br> 
-		Este procedimiento se realiza bajo anestesia local (sin pérdida del conocimiento). <br> 
-		<br> 
-		A veces se puede aprovechar el mismo momento de la extracción del diente deteriorado para colocar el implante en la misma sesión y así se evita el tener que realizar una segunda intervención.<br> 
-		<br> 
-		Los implantes colocados de esta manera se les denomina implantes inmediatos y comportan una gran comodidad y rapidez a la hora de realizar estos tratamientos.
+		El enfoque de este campo de la odontología es hacia la conservación de los dientes en la boca tratando de evitar la extracción. Cuando el diente ha sido agredido por una caries, se debe limpiar el tejido dañado y realizar una obturación. Cuando la profundidad de la lesión es desfavorable con respecto al nervio, nuestro tratamiento será realizar la endodoncia. Posteriormente, la pieza será reconstruida y en muchas ocasiones restaurada por una corona de porcelana.<br> 
+		Todos nuestros tratamientos, en éste como en los demás campos, persiguen conseguir el mejor resultado. En esta línea son llamativos los resultados que se consiguen con las técnicas de blanqueamiento dental.
 	</div>
-	<span id="e8"></span>
-	<span id="e7"></span>
+	<span id="e8" class="cc70"></span>
+	<div id="e7" class="info">
+		El sistema de blanqueamiento dental profesional consiste en aislar el diente de la encia colocando un gel sobre el diente que será activado con calor mediante unas lámparas de LED y además llevará el complemento de un blanqueamiento dental ambulatorio que se realizará en casa mediante aplicación de un gel blanqueador en unas cubetas a medida que se utilizaran durante la noche. Como efecto secundario podrá aparecer una ligera sensibilidad que será transitoria. Las indicaciones del profesional le ayudaran a prevenir los efectos secundarios y controlar los resultados del tratamiento.
+	</div>
 	<div id="e6" class="quien menu">
-		<a href="patrodent_002.htm">
+		<a href="quien_soy.htm">
 		QUIEN SOY      </a>
 	</div>
 	<div id="e5" class="servicios menu">
-		<a href="patrodent_005.htm">
+		<a href="servicios.htm">
 		SERVICIOS      </a>
 	</div>
 	<div id="e4" class="situacion menu">
-		<a href="patrodent_003.htm">
+		<a href="situacion.htm">
 		SITUACION     </a>
 	</div>
 	<div id="e3" class="instalaciones menu">
-		<a href="patrodent_004.htm">
+		<a href="instalaciones.htm">
 		INSTALACIONES     </a>
 	</div>
 	<div id="e2" class="contactar menu">
@@ -102,7 +99,7 @@
 		CONTACTAR    </a>
 	</div>
 	<div id="e1" class="volver">
-		<a href="patrodent_005.htm">
+		<a href="servicios.htm">
 		Volver      </a>
 	</div>
 </div>
