--- a/html/quien_soy.htm
+++ b/html/quien_soy.htm
@@ -9,7 +9,7 @@
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
 	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
 	<link rel="stylesheet" href="css/patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
-	<link rel="stylesheet" href="css/patrodent_002_p.css" type="text/css" media="screen,projection,print">	
+	<link rel="stylesheet" href="css/quien_soy.css" type="text/css" media="screen,projection,print">	
 </head>
 
 
@@ -77,19 +77,19 @@
 	<span id="e8" class="cc19"></span>
 	<span id="e7" class="cc19"></span>
 	<div id="e6" class="quien menu">
-		<a href="patrodent_002.htm">
+		<a href="quien_soy.htm">
 		QUIEN SOY      </a>
 	</div>
 	<div id="e5" class="servicios menu">
-		<a href="patrodent_005.htm">
+		<a href="servicios.htm">
 		SERVICIOS      </a>
 	</div>
 	<div id="e4" class="situacion menu">
-		<a href="patrodent_003.htm">
+		<a href="situacion.htm">
 		SITUACION     </a>
 	</div>
 	<div id="e3" class="instalaciones menu">
-		<a href="patrodent_004.htm">
+		<a href="instalaciones.htm">
 		INSTALACIONES     </a>
 	</div>
 	<div id="e2" class="contactar menu">
