Cambio htm por html

--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
 		COPYRIGHT @ 2009 - PATRODENT - TODOS LOS DERECHOS RESERVADOS
 	</div>
 	<div id="e20" class="quien menu">
-		<a href="quien_soy.htm">
+		<a href="quien_soy.html">
 		QUIEN SOY      </a>
 	</div>
 	<div id="e19" class="patro">
@@ -80,15 +80,15 @@
 	<span id="e6" class="cc10"></span>
 	<span id="e5" class="cc10"></span>
 	<div id="e4" class="servicios menu">
-		<a href="servicios.htm">
+		<a href="servicios.html">
 		SERVICIOS      </a>
 	</div>
 	<div id="e3" class="situacion menu">
-		<a href="situacion.htm">
+		<a href="situacion.html">
 		SITUACION     </a>
 	</div>
 	<div id="e2" class="instalaciones menu">
-		<a href="instalaciones.htm">
+		<a href="instalaciones.html">
 		INSTALACIONES     </a>
 	</div>
 	<div id="e1" class="contactar menu">
