--- a/html/servicios.html
+++ b/html/servicios.html
@@ -68,64 +68,64 @@
 	<span id="e24" class="telefono"></span>
 	<span id="e23" class="barra"></span>
 	<span id="e22" class="barra barra2"></span>
-	<a href="periodoncia.htm">
+	<a href="periodoncia.html">
 		<img id="e21" name="e21" src="./images/b-norm.gif" title="" alt="./images/b-norm.gif" align="right" border="0"></a>
-	<a href="periodoncia.htm">
+	<a href="periodoncia.html">
 		<img id="e20" name="e20" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
-	<a href="odontologia.htm" onmouseover="OnWeOver(0,0,0,IDP[6],Img19,'odontologia.htm',1)" onmouseout="OnWeOver(0,0,0,IDP[6],Img19,0,0)">
+	<a href="odontologia.html" onmouseover="OnWeOver(0,0,0,IDP[6],Img19,'odontologia.html',1)" onmouseout="OnWeOver(0,0,0,IDP[6],Img19,0,0)">
 		<img id="e19" name="e19" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
 	<div id="e18" class="cc48">
-		<a href="odontologia.htm">
+		<a href="odontologia.html">
 		ODONTOLOGIA GENERAL</a>
 	</div>
 	<div id="e17" class="cc48">
-		<a href="blanqueamiento.htm">
+		<a href="blanqueamiento.html">
 		ESTETICA DENTAL. BLANQUEAMIENTO</a>
 	</div>
 	<div id="e16" class="cc48">
-		<a href="odontopediatria.htm">
+		<a href="odontopediatria.html">
 		ODONTOPEDIATRIA</a>
 	</div>
 	<div id="e15" class="cc48">
-		<a href="periodoncia.htm">
+		<a href="periodoncia.html">
 		PERIODONCIA</a>
 	</div>
-	<a href="blanqueamiento.htm" onmouseover="OnWeOver(0,0,0,IDP[5],Img14,'blanqueamiento.htm',1)" onmouseout="OnWeOver(0,0,0,IDP[5],Img14,0,0)">
+	<a href="blanqueamiento.html" onmouseover="OnWeOver(0,0,0,IDP[5],Img14,'blanqueamiento.html',1)" onmouseout="OnWeOver(0,0,0,IDP[5],Img14,0,0)">
 		<img id="e14" name="e14" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
-	<a href="odontopediatria.htm" onmouseover="OnWeOver(0,0,0,IDP[4],Img13,'odontopediatria.htm',1)" onmouseout="OnWeOver(0,0,0,IDP[4],Img13,0,0)">
+	<a href="odontopediatria.html" onmouseover="OnWeOver(0,0,0,IDP[4],Img13,'odontopediatria.html',1)" onmouseout="OnWeOver(0,0,0,IDP[4],Img13,0,0)">
 		<img id="e13" name="e13" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
-	<a href="ortodoncia.htm" onmouseover="OnWeOver(0,0,0,IDP[3],Img12,'ortodoncia.htm',1)" onmouseout="OnWeOver(0,0,0,IDP[3],Img12,0,0)">
+	<a href="ortodoncia.html" onmouseover="OnWeOver(0,0,0,IDP[3],Img12,'ortodoncia.html',1)" onmouseout="OnWeOver(0,0,0,IDP[3],Img12,0,0)">
 		<img id="e12" name="e12" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
 	<div id="e11" class="cc48">
-		<a href="ortodoncia.htm">
+		<a href="ortodoncia.html">
 		ORTODONCIA</a>
 	</div>
 	<div id="e10" class="cc48">
-		<a href="implantes.htm">
+		<a href="implantes.html">
 		IMPLANTES</a>
 	</div>
 	<div id="e9" class="cc48">
-		<a href="atm.htm">
+		<a href="atm.html">
 		ATM (Problemas de Articulación)</a>
 	</div>
-	<a href="implantes.htm" onmouseover="OnWeOver(0,0,0,IDP[2],Img8,'implantes.htm',1)" onmouseout="OnWeOver(0,0,0,IDP[2],Img8,0,0)">
+	<a href="implantes.html" onmouseover="OnWeOver(0,0,0,IDP[2],Img8,'implantes.html',1)" onmouseout="OnWeOver(0,0,0,IDP[2],Img8,0,0)">
 		<img id="e8" name="e8" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
-	<a href="atm.htm" onmouseover="OnWeOver(0,0,0,IDP[1],Img7,'atm.htm',1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img7,0,0)">
+	<a href="atm.html" onmouseover="OnWeOver(0,0,0,IDP[1],Img7,'atm.html',1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img7,0,0)">
 		<img id="e7" name="e7" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
 	<div id="e6" class="quien menu">
-		<a href="quien_soy.htm">
+		<a href="quien_soy.html">
 		QUIEN SOY      </a>
 	</div>
 	<div id="e5" class="servicios menu">
-		<a href="servicios.htm">
+		<a href="servicios.html">
 		SERVICIOS      </a>
 	</div>
 	<div id="e4" class="situacion menu">
-		<a href="situacion.htm">
+		<a href="situacion.html">
 		SITUACION     </a>
 	</div>
 	<div id="e3" class="instalaciones menu">
-		<a href="instalaciones.htm">
+		<a href="instalaciones.html">
 		INSTALACIONES     </a>
 	</div>
 	<div id="e2" class="contactar menu">
