--- a/html/situacion.html
+++ b/html/situacion.html
@@ -71,19 +71,19 @@
 	<span id="e9" class="barra"></span>
 	<span id="e8" class="barra barra2"></span>
 	<div id="e7" class="quien menu">
-		<a href="quien_soy.htm">
+		<a href="quien_soy.html">
 		QUIEN SOY      </a>
 	</div>
 	<div id="e6" class="servicios  menu">
-		<a href="servicios.htm">
+		<a href="servicios.html">
 		SERVICIOS      </a>
 	</div>
 	<div id="e5" class="situacion  menu">
-		<a href="situacion.htm">
+		<a href="situacion.html">
 		SITUACION     </a>
 	</div>
 	<div id="e4" class="instalaciones  menu">
-		<a href="instalaciones.htm">
+		<a href="instalaciones.html">
 		INSTALACIONES     </a>
 	</div>
 	<div id="e3" class="contactar  menu">
