--- a/html/instalaciones.html
+++ b/html/instalaciones.html
@@ -2,26 +2,41 @@
 <!-- Generado por Tecnología Avanquest v:7.1. Para su mayor información, por favor visite: http://www.avanquest.com -->
 <html lang="es">
 <head>
-	<title> Serv3 </title>
+	<title> Instalaciones </title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
 	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
 	<link rel="stylesheet" href="css/patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
-	<link rel="stylesheet" href="css/odontopediatria.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
-	<script src="js/patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
-	<script src="js/odontopediatria.js" type="text/javascript"></script>		<!--// Motion Script //-->
+	<link rel="stylesheet" href="css/instalaciones.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 </head>
 
 
-<body onload="if(IE||V5) OnWeLoad()">
+<body>
 <div id="page" class="page">
-	<span id="e29" class="header_box"></span>
-	<span id="e28" class="deco_superior"></span>
-	<span id="e27" class="navigation_box_superior"></span>
-	<span id="e26" class="deco_inferior"></span>
-	<span id="e25" class="navigation_box_inferior"></span>
+	<span id="e31" class="header_box_superio"></span>
+	<span id="e30" class="deco_superior"></span>
+	<span id="e29" class="navigation_box"></span>
+	<span id="e28" class="deco_inferior"></span>
+	<span id="e27" class="navigation_box_inferior"></span>
+	<h4 id="e26" class="page_tag">
+		Instalaciones
+	</h4>
+	<div id="e25" class="info">
+		La clínica esta dotada de 3 gabinetes completos, con radiologia digital.<br> 
+		Sala de rayos  completamente aislada para la realización de panorex y telerradiografías. Sala de esterilización y limpieza del instrumental, junto con una zona de preparación de modelos de escayola (recortadora de modelos) y microarenadora para limpieza de braquets.<br> 
+		<br> 
+		<br> 
+		<br> 
+		<br> 
+		<br> 
+		<br> 
+		<br> 
+		Cada uno de nuestros gabinetes de tratamiento y prevención, así como nuestras salas de rayos y de esterilización, se encuentran completamente equipados para poderle ofrecer el máximo nivel de calidad y seguridad en todos nuestros tratamientos.<br> 
+		La radiología digital nos permite obtener radiografías en menor tiempo y reducir en un 80% la dosis de radiación que reciben nuestros pacientes.<br> 
+		Un despacho para la atención personal de la doctora con el paciente, la recepción y una sala de espera muy confortable completan el conjunto de la clínica.
+	</div>
 	<span id="e24" class="banner"></span>
 	<h4 id="e23" class="page_tag telefono_valor">
 		954 211 422
@@ -65,33 +80,24 @@
 	<span id="e13" class="telefono"></span>
 	<span id="e12" class="barra"></span>
 	<span id="e11" class="barra barra2"></span>
-	<a href="#" onmouseover="OnWeOver(0,0,0,IDP[1],Img10,0,1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img10,0,0)">
-		<img id="e10" name="e10" src="./images/b-norm2.gif" title="" alt="./images/b-norm2.gif" align="right" border="0"></a>
-	<div id="e9" class="cc80">
-		ODONTOPEDIATRIA
-	</div>
-	<div id="e8" class="info">
-		La odontología infantil constituye una especialidad, porque el trato de los niños así como su tratamiento son distintos de los de los adultos.<br> 
-		<br> 
-		Lo fundamental es conseguir la total confianza del niño para que colabore como paciente y esto requiere un acercamiento progresivo y unos tiempos mayores que en el caso de los adultos.<br> 
-		<br> 
-		La Dra. Patrocinio Gómez está muy habituada, debido a su experiencia, a tratar a los pequeños pacientes con la dedicación y cuidado que esta delicada relación terapéutica requiere.
-	</div>
-	<span id="e7" class="cc81"></span>
+	<span id="e10" class="cc38"></span>
+	<span id="e9" class="cc38"></span>
+	<span id="e8" class="cc38"></span>
+	<span id="e7" class="cc38"></span>
 	<div id="e6" class="quien menu">
-		<a href="quien_soy.htm">
+		<a href="quien_soy.html">
 		QUIEN SOY      </a>
 	</div>
 	<div id="e5" class="servicios menu">
-		<a href="servicios.htm">
+		<a href="servicios.html">
 		SERVICIOS      </a>
 	</div>
 	<div id="e4" class="situacion menu">
-		<a href="situacion.htm">
+		<a href="situacion.html">
 		SITUACION     </a>
 	</div>
 	<div id="e3" class="instalaciones menu">
-		<a href="instalaciones.htm">
+		<a href="instalaciones.html">
 		INSTALACIONES     </a>
 	</div>
 	<div id="e2" class="contactar menu">
@@ -99,7 +105,7 @@
 		CONTACTAR    </a>
 	</div>
 	<div id="e1" class="volver">
-		<a href="servicios.htm">
+		<a href="index.html">
 		Volver      </a>
 	</div>
 </div>
