--- a/html/quien_soy.html
+++ b/html/quien_soy.html
@@ -77,19 +77,19 @@
 	<span id="e8" class="cc19"></span>
 	<span id="e7" class="cc19"></span>
 	<div id="e6" class="quien menu">
-		<a href="quien_soy.htm">
+		<a href="quien_soy.html">
 		QUIEN SOY      </a>
 	</div>
 	<div id="e5" class="servicios menu">
-		<a href="servicios.htm">
+		<a href="servicios.html">
 		SERVICIOS      </a>
 	</div>
 	<div id="e4" class="situacion menu">
-		<a href="situacion.htm">
+		<a href="situacion.html">
 		SITUACION     </a>
 	</div>
 	<div id="e3" class="instalaciones menu">
-		<a href="instalaciones.htm">
+		<a href="instalaciones.html">
 		INSTALACIONES     </a>
 	</div>
 	<div id="e2" class="contactar menu">
