--- a/trunk/html/periodoncia.html
+++ b/trunk/html/periodoncia.html
@@ -79,19 +79,19 @@
 	<span id="e8"></span>
 	<span id="e7"></span>
 	<div id="e6" class="quien menu">
-		<a href="quien_soy.htm">
+		<a href="quien_soy.html">
 		QUIEN SOY      </a>
 	</div>
 	<div id="e5" class="servicios menu">
-		<a href="servicios.htm">
+		<a href="servicios.html">
 		SERVICIOS      </a>
 	</div>
 	<div id="e4" class="situacion menu">
-		<a href="situacion.htm">
+		<a href="situacion.html">
 		SITUACION     </a>
 	</div>
 	<div id="e3" class="instalaciones menu">
-		<a href="instalaciones.htm">
+		<a href="instalaciones.html">
 		INSTALACIONES     </a>
 	</div>
 	<div id="e2" class="contactar menu">
@@ -99,7 +99,7 @@
 		CONTACTAR    </a>
 	</div>
 	<div id="e1" class="volver">
-		<a href="servicios.htm">
+		<a href="servicios.html">
 		Volver      </a>
 	</div>
 </div>
