--- a/trunk/html/situacion.html
+++ b/trunk/html/situacion.html
@@ -8,7 +8,7 @@
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
 	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
-	<link rel="stylesheet" href="css/patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
+	<link rel="stylesheet" href="css/patrodent.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="css/situacion.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 </head>
 
