--- a/html/odontopediatria.html
+++ b/html/odontopediatria.html
@@ -8,7 +8,7 @@
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
 	<meta name="Keywords" content="CLINICA DENTAL, ORTODONCIA, ATM, PERIODONCIA, ODONTOLOGIA">
 	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez">
-	<link rel="stylesheet" href="css/patrodent_g.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
+	<link rel="stylesheet" href="css/patrodent.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="css/odontopediatria.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
 	<script src="js/patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
 	<script src="js/odontopediatria.js" type="text/javascript"></script>		<!--// Motion Script //-->
