Justifico el texto de la web

--- a/html/instalaciones.html
+++ b/html/instalaciones.html
@@ -24,7 +24,7 @@
 		Instalaciones
 	</h4>
 	<div id="e25" class="info">
-		La clínica esta dotada de 3 gabinetes completos, con radiologia digital.<br> 
+		La clínica esta dotada de 3 gabinetes completos, con radiologia digital.
 		Sala de rayos  completamente aislada para la realización de panorex y telerradiografías. Sala de esterilización y limpieza del instrumental, junto con una zona de preparación de modelos de escayola (recortadora de modelos) y microarenadora para limpieza de braquets.<br> 
 		<br> 
 		<br> 
