--- a/trunk/html/odontologia.html
+++ b/trunk/html/odontologia.html
@@ -77,9 +77,10 @@
 		Consejos y Normas en Higiene Bucal
 	</h4>
 	<div id="e12" class="info">
-		El cepillado de dientes es el primer paso para mantener unos dientes y encías saludables para toda la vida.<br> 
-		El cepillado correcto requiere como mínimo 5 minutos, y es necesario cepillar los dientes después de cada comida. <br> 
-		De los tres cepillados que se deberían hacer durante el día, el más importante y efectivo es el cepillado de antes de ir a dormir, ya que nos mantiene la boca limpia durante muchas horas.
+        <ul>
+            <li>El cepillado de dientes es el primer paso para mantener unos dientes y encías saludables para toda la vida.</li> 
+            <li>El cepillado correcto requiere como mínimo 5 minutos, y es necesario cepillar los dientes después de cada comida. </li> 
+            <li>De los tres cepillados que se deberían hacer durante el día, el más importante y efectivo es el cepillado de antes de ir a dormir, ya que nos mantiene la boca limpia durante muchas horas.</li>
 	</div>
 	<h4 id="e11" class="page_tag">
 		Técnica para un Cepillado de Dientes correcto
