--- a/trunk/html/index.html
+++ b/trunk/html/index.html
@@ -76,9 +76,9 @@
 	<span id="e10" class="barra"></span>
 	<span id="e9" class="barra barra2"></span>
 	<span id="e8" class="cc09"></span>
-	<span id="e7" class="cc10"></span>
-	<span id="e6" class="cc10"></span>
-	<span id="e5" class="cc10"></span>
+	<span id="e7" class="cc10 images"></span>
+	<span id="e6" class="cc10 images"></span>
+	<span id="e5" class="cc10 images"></span>
 	<div id="e4" class="servicios menu">
 		<a href="servicios.html">
 		SERVICIOS      </a>
