--- a/html/ortodoncia.html
+++ b/html/ortodoncia.html
@@ -2,7 +2,7 @@
 <!-- Generado por Tecnología Avanquest v:7.1. Para su mayor información, por favor visite: http://www.avanquest.com -->
 <html lang="es">
 <head>
-	<title> Serv5 </title>
+	<title> Ortodoncia </title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
@@ -101,7 +101,7 @@
 	</div>
 	<div id="e4" class="situacion menu">
 		<a href="situacion.html">
-		SITUACION     </a>
+		SITUACIÓN     </a>
 	</div>
 	<div id="e3" class="instalaciones menu">
 		<a href="instalaciones.html">
