--- a/trunk/html/servicios.html
+++ b/trunk/html/servicios.html
@@ -59,10 +59,10 @@
 		Viernes<br> 
 		MAÑANAS de 9:00 a 2:00
 	</div>
-	<h4 id="e26" class="consulta">
+	<h4 id="e26" class="page_tag consulta">
 		CONSULTA
 	</h4>
-	<h4 id="e25" class="citas">
+	<h4 id="e25" class="page_tag citas">
 		CITAS
 	</h4>
 	<span id="e24" class="telefono"></span>
