--- a/html/situacion.html
+++ b/html/situacion.html
@@ -78,7 +78,7 @@
 		<a href="servicios.html">
 		SERVICIOS      </a>
 	</div>
-	<div id="e5" class="situacion  menu">
+	<div id="e5" class="situacion  menu activo">
 		<a href="situacion.html">
 		SITUACIÓN     </a>
 	</div>
