--- a/trunk/html/instalaciones.html
+++ b/trunk/html/instalaciones.html
@@ -98,7 +98,7 @@
 		<a href="situacion.html">
 		SITUACIÓN     </a>
 	</div>
-	<div id="e3" class="instalaciones menu">
+	<div id="e3" class="instalaciones menu activo">
 		<a href="instalaciones.html">
 		INSTALACIONES     </a>
 	</div>
