--- a/trunk/html/odontologia.html
+++ b/trunk/html/odontologia.html
@@ -96,7 +96,7 @@
 		<a href="quien_soy.html">
 		QUIEN SOY      </a>
 	</div>
-	<div id="e5" class="servicios menu">
+	<div id="e5" class="servicios menu activo">
 		<a href="servicios.html">
 		SERVICIOS      </a>
 	</div>
