--- a/trunk/html/quien_soy.html
+++ b/trunk/html/quien_soy.html
@@ -76,7 +76,7 @@
 	<span id="e9" class="cc19"></span>
 	<span id="e8" class="cc19"></span>
 	<span id="e7" class="cc19"></span>
-	<div id="e6" class="quien menu">
+	<div id="e6" class="quien menu activo">
 		<a href="quien_soy.html">
 		QUIEN SOY      </a>
 	</div>
