--- a/html/quien_soy.html
+++ b/html/quien_soy.html
@@ -76,6 +76,10 @@
 	<span id="e9" class="cc19"></span>
 	<span id="e8" class="cc19"></span>
 	<span id="e7" class="cc19"></span>
+    <div class="indice menu">
+        <a href="index.html">
+        INICIO      </a>
+    </div>
 	<div id="e6" class="quien menu activo">
 		<a href="quien_soy.html">
 		QUIEN SOY      </a>
@@ -84,17 +88,13 @@
 		<a href="servicios.html">
 		SERVICIOS      </a>
 	</div>
-	<div id="e4" class="situacion menu">
-		<a href="situacion.html">
-		SITUACIÓN     </a>
-	</div>
+    <div id="e3" class="contacto menu">
+        <a href="contacto.html">
+        CONTACTO     </a>
+    </div>
 	<div id="e3" class="instalaciones menu">
 		<a href="instalaciones.html">
 		INSTALACIONES     </a>
-	</div>
-	<div id="e2" class="contactar menu">
-		<a href="mailto:patro.gomez.pg@gmail.com;patro.gomez@vodafone.es">
-		CONTACTAR    </a>
 	</div>
 	<div id="e1" class="volver">
 		<a href="index.html">
