--- a/html/atm.html
+++ b/html/atm.html
@@ -78,6 +78,10 @@
 		En muchos casos un simple balanceo de la mordida (ajuste oclusal) puede dar un descanso inmediato. El método mas usado para conseguir esta relajación inmediata es la férula de descarga. Es un aparato removible de acrílico que se diseña a medida, normalmente en los dientes superiores, y se ajusta a una posición articular fisiológica. Los dientes opuestos golpean en el acrílico creando una mordida muy confortable y atraumática. 
 	</div>
 	<span id="e7"></span>
+    <div class="indice menu">
+        <a href="index.html">
+        INICIO      </a>
+    </div>
 	<div id="e6" class="quien menu">
 		<a href="quien_soy.html">
 		QUIEN SOY      </a>
@@ -86,17 +90,13 @@
 		<a href="servicios.html">
 		SERVICIOS      </a>
 	</div>
-	<div id="e4" class="situacion menu">
-		<a href="situacion.html">
-		SITUACIÓN     </a>
-	</div>
+    <div id="e3" class="contacto menu">
+        <a href="contacto.html">
+        CONTACTO     </a>
+    </div>
 	<div id="e3" class="instalaciones menu">
 		<a href="instalaciones.html">
 		INSTALACIONES     </a>
-	</div>
-	<div id="e2" class="contactar menu">
-		<a href="mailto:patro.gomez.pg@gmail.com;patro.gomez@vodafone.es">
-		CONTACTAR    </a>
 	</div>
 	<div id="e1" class="volver">
 		<a href="servicios.html">
