Añado en el titulo nombre del dominio: "Clinica Dental Patrocinio Gomez"
Cambio de posicion la página de contacto, en mapa y el texto

Agrando el mapa de google maps

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -2,7 +2,7 @@
 <!-- Generado por Tecnología Avanquest v:7.1. Para su mayor información, por favor visite: http://www.avanquest.com -->
 <html lang="es">
 <head>
-	<title> Situación </title>
+	<title> Contacto - Clinica Dental Patrocinio Gomez </title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Style-Type" content="text/css;">
 	<meta name="Author" content="Clinica Dental PATROCINIO GOMEZ MARTINEZ">
@@ -21,8 +21,13 @@
 	<span id="e25" class="deco_inferior"></span>
 	<span id="e24" class="navigation_box_inferior"></span>
 	<h4 id="e23" class="page_tag">
-		<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.es/maps?f=q&amp;source=s_q&amp;hl=es&amp;geocode=&amp;q=sevilla,+marques+de+paradas,+22&amp;sll=40.396764,-3.713379&amp;sspn=10.586993,23.203125&amp;ie=UTF8&amp;ll=37.399824,-5.997076&amp;spn=0.005396,0.01133&amp;z=14&amp;output=embed&amp;s=AARTsJrpOW7bSgyMQQyecSfQD5_LKTW3gA"></iframe><br /><small><a href="http://maps.google.es/maps?f=q&amp;source=embed&amp;hl=es&amp;geocode=&amp;q=sevilla,+marques+de+paradas,+22&amp;sll=40.396764,-3.713379&amp;sspn=10.586993,23.203125&amp;ie=UTF8&amp;ll=37.399824,-5.997076&amp;spn=0.005396,0.01133&amp;z=14" style="color:#0000ff;text-align:left">Ver mapa más grande</a></small>
-		Plano de Situación</a>
+		<iframe width="580" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.es/maps?f=q&amp;source=s_q&amp;hl=es&amp;geocode=&amp;q=sevilla,+marques+de+paradas,+22&amp;sll=40.396764,-3.713379&amp;sspn=10.586993,23.203125&amp;ie=UTF8&amp;ll=37.399824,-5.997076&amp;spn=0.005396,0.01133&amp;z=14&amp;output=embed&amp;s=AARTsJrpOW7bSgyMQQyecSfQD5_LKTW3gA"></iframe>
+        <br/>
+        <small>
+            <a href="http://maps.google.es/maps?f=q&amp;source=embed&amp;hl=es&amp;geocode=&amp;q=sevilla,+marques+de+paradas,+22&amp;sll=40.396764,-3.713379&amp;sspn=10.586993,23.203125&amp;ie=UTF8&amp;ll=37.399824,-5.997076&amp;spn=0.005396,0.01133&amp;z=14" style="color:#0000ff;text-align:left" class="maps">Ver mapa más grande
+            </a>
+        </small>
+		Contacto</a>
 	</h4>
 	<div id="e22" class="info">
 		La clínica de la Dra. Patrocinio Gómez está situada en la céntrica calle Marqués de Paradas en la entrada a Sevilla por PLAZA DE ARMAS, teniendo en los alrededores varios parking públicos y un centro comercial de ocio en Plaza de Armas, con tiendas de prestigio, salas de cine, etc ...  
@@ -95,7 +100,7 @@
 		Volver      </a>
 	</div>
 	<h4 id="e1" class="page_tag">
-		Plano de Situación
+		Contacto
 	</h4>
 </div>
 </body>
