Cambio la página de Contacto para añadirle secciones. Refactorizacion

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -20,18 +20,25 @@
 	<span id="e26" class="navigation_box_superior"></span>
 	<span id="e25" class="deco_inferior"></span>
 	<span id="e24" class="navigation_box_inferior"></span>
-	<h4 id="e23" class="page_tag">
-		<iframe width="580" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.es/maps?f=q&amp;source=s_q&amp;hl=es&amp;geocode=&amp;q=sevilla,+marques+de+paradas,+22&amp;sll=40.396764,-3.713379&amp;sspn=10.586993,23.203125&amp;ie=UTF8&amp;ll=37.399824,-5.997076&amp;spn=0.005396,0.01133&amp;z=14&amp;output=embed&amp;s=AARTsJrpOW7bSgyMQQyecSfQD5_LKTW3gA"></iframe>
+    <h2 id="titulo2" class="page_tag titulo2">Contacto</h2>
+	<div id="e22" class="info">
+		La clínica de la Dra. Patrocinio Gómez está situada en la céntrica calle Marqués de Paradas en la entrada a Sevilla por PLAZA DE ARMAS, teniendo en los alrededores varios parking públicos y un centro comercial de ocio en Plaza de Armas, con tiendas de prestigio, salas de cine, etc ...  
+	</div>
+    <h2 id="mapa" class="page_tag titulo2">Situación</h2>
+    <div id="mapa_texto" class="page_tag">
+        <iframe width="580" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.es/maps?f=q&amp;source=s_q&amp;hl=es&amp;geocode=&amp;q=sevilla,+marques+de+paradas,+22&amp;sll=40.396764,-3.713379&amp;sspn=10.586993,23.203125&amp;ie=UTF8&amp;ll=37.399824,-5.997076&amp;spn=0.005396,0.01133&amp;z=14&amp;output=embed&amp;s=AARTsJrpOW7bSgyMQQyecSfQD5_LKTW3gA"></iframe>
         <br/>
         <small>
             <a href="http://maps.google.es/maps?f=q&amp;source=embed&amp;hl=es&amp;geocode=&amp;q=sevilla,+marques+de+paradas,+22&amp;sll=40.396764,-3.713379&amp;sspn=10.586993,23.203125&amp;ie=UTF8&amp;ll=37.399824,-5.997076&amp;spn=0.005396,0.01133&amp;z=14" style="color:#0000ff;text-align:left" class="maps">Ver mapa más grande
             </a>
         </small>
-		Contacto</a>
-	</h4>
-	<div id="e22" class="info">
-		La clínica de la Dra. Patrocinio Gómez está situada en la céntrica calle Marqués de Paradas en la entrada a Sevilla por PLAZA DE ARMAS, teniendo en los alrededores varios parking públicos y un centro comercial de ocio en Plaza de Armas, con tiendas de prestigio, salas de cine, etc ...  
-	</div>
+    </div>
+    <h2 id="direccion" class="page_tag titulo2">Dirección</h2>
+    <div id="direccion_texto">
+         <p> C/ Marques de Paradas nº 22 1 º dcha. </p>
+         <p> 41001 SEVILLA </p>
+         <p><a href="mailto:patro.gomez.pg@gmail.com"> Correo electrónico </a></p>
+    </div>
 	<span id="e21" class="banner"></span>
 	<h4 id="e20" class="page_tag telefono_valor">
 		954 211 422
@@ -99,9 +106,6 @@
 		<a href="index.html">
 		Volver      </a>
 	</div>
-	<h4 id="e1" class="page_tag">
-		Contacto
-	</h4>
-</div>
+	</div>
 </body>
 </html>
