--- a/html/index.html
+++ b/html/index.html
@@ -20,9 +20,9 @@
 	<span id="e28" class="navigation_box navigation_box_superior"></span>
 	<span id="e27" class="deco_inferior"></span>
 	<span id="e26" class="navigation_box_inferior"></span>
-	<h4 id="e25" class="page_tag">
+	<h2 id="titulo2" class="page_tag">
 		Bienvenidos a nuestra Clínica
-	</h4>
+	</h2>
 	<div id="e24" class="info">
 		La clínica dental de la Dra. Patrocinio Gómez Martínez es una consulta de odontología integral, que le permitirá resolver todos los problemas de salud y estética buco dental de una manera sencilla cómoda y eficaz.<br> 
 		<br> 
