--- a/html/instalaciones.html
+++ b/html/instalaciones.html
@@ -20,9 +20,9 @@
 	<span id="e29" class="navigation_box"></span>
 	<span id="e28" class="deco_inferior"></span>
 	<span id="e27" class="navigation_box_inferior"></span>
-	<h4 id="e26" class="page_tag">
+	<h2 id="titulo2" class="page_tag">
 		Instalaciones
-	</h4>
+	</h2>
 	<div id="e25" class="info">
 		La clínica esta dotada de 3 gabinetes completos, con radiologia digital.
 		Sala de rayos  completamente aislada para la realización de panorex y telerradiografías. Sala de esterilización y limpieza del instrumental, junto con una zona de preparación de modelos de escayola (recortadora de modelos) y microarenadora para limpieza de braquets.<br> 
