--- a/html/quien_soy.html
+++ b/html/quien_soy.html
@@ -20,9 +20,9 @@
 	<span id="e28" class="navigation_box navigation_box_superior"></span>
 	<span id="e27" class="deco deco_inferior"></span>
 	<span id="e26" class="navigation_box navigation_box_inferior"></span>
-	<h4 id="e25" class="page_tag">
+	<h2 id="titulo2" class="page_tag">
 		Dra. Patrocinio Gómez Martínez
-	</h4>
+	</h2>
 	<div id="e24" class="info">
 		La Dra. Patrocinio Gómez funda su consulta en Sevilla en el año 1982 después de haber cursado la Licenciatura de Medicina y Cirugía general en la Facultad de Sevilla y   la Especialidad de Estomatología en la misma facultad.<br> 
 		<br> 
