Arreglo seccion de servicios

--- a/html/instalaciones.html
+++ b/html/instalaciones.html
@@ -20,7 +20,7 @@
 	<span id="e29" class="navigation_box"></span>
 	<span id="e28" class="deco_inferior"></span>
 	<span id="e27" class="navigation_box_inferior"></span>
-	<h2 id="titulo2" class="page_tag">
+	<h2 id="titulo2" class="titulo2 page_tag">
 		Instalaciones
 	</h2>
 	<div id="e25" class="info">
