--- a/html/servicios.html
+++ b/html/servicios.html
@@ -10,13 +10,14 @@
 	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez C/ Marques de Paradas nº 22 1 º dcha Sevilla">
 	<link rel="stylesheet" href="css/patrodent.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="css/servicios.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
-	<script src="js/patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
-	<script src="js/servicios.js" type="text/javascript"></script>		<!--// Motion Script //-->
 </head>
 
 
-<body onload="if(IE||V5) OnWeLoad()">
+<body>
 <div id="page" class="page">
+    <h2 id="titulo2" class="titulo2 page_tag">
+        Servicios
+    </h2>
 	<span id="e41" class="header_box"></span>
 	<span id="e40" class="deco_superior"></span>
 	<span id="e39" class="navigation_box_superior"></span>
@@ -68,12 +69,6 @@
 	<span id="e24" class="telefono"></span>
 	<span id="e23" class="barra"></span>
 	<span id="e22" class="barra barra2"></span>
-	<a href="periodoncia.html">
-		<img id="e21" name="e21" src="./images/b-norm.gif" title="" alt="./images/b-norm.gif" align="right" border="0"></a>
-	<a href="periodoncia.html">
-		<img id="e20" name="e20" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
-	<a href="odontologia.html" onmouseover="OnWeOver(0,0,0,IDP[6],Img19,'odontologia.html',1)" onmouseout="OnWeOver(0,0,0,IDP[6],Img19,0,0)">
-		<img id="e19" name="e19" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
 	<div id="e18" class="cc48">
 		<a href="odontologia.html">
 		ODONTOLOGIA GENERAL</a>
@@ -90,12 +85,6 @@
 		<a href="periodoncia.html">
 		PERIODONCIA</a>
 	</div>
-	<a href="blanqueamiento.html" onmouseover="OnWeOver(0,0,0,IDP[5],Img14,'blanqueamiento.html',1)" onmouseout="OnWeOver(0,0,0,IDP[5],Img14,0,0)">
-		<img id="e14" name="e14" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
-	<a href="odontopediatria.html" onmouseover="OnWeOver(0,0,0,IDP[4],Img13,'odontopediatria.html',1)" onmouseout="OnWeOver(0,0,0,IDP[4],Img13,0,0)">
-		<img id="e13" name="e13" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
-	<a href="ortodoncia.html" onmouseover="OnWeOver(0,0,0,IDP[3],Img12,'ortodoncia.html',1)" onmouseout="OnWeOver(0,0,0,IDP[3],Img12,0,0)">
-		<img id="e12" name="e12" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
 	<div id="e11" class="cc48">
 		<a href="ortodoncia.html">
 		ORTODONCIA</a>
@@ -108,10 +97,6 @@
 		<a href="atm.html">
 		ATM (Problemas de Articulación)</a>
 	</div>
-	<a href="implantes.html" onmouseover="OnWeOver(0,0,0,IDP[2],Img8,'implantes.html',1)" onmouseout="OnWeOver(0,0,0,IDP[2],Img8,0,0)">
-		<img id="e8" name="e8" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
-	<a href="atm.html" onmouseover="OnWeOver(0,0,0,IDP[1],Img7,'atm.html',1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img7,0,0)">
-		<img id="e7" name="e7" src="./images//b-norm2.gif" title="" alt="./images//b-norm2.gif" align="right" border="0"></a>
     <div class="indice menu">
         <a href="index.html">
         INICIO      </a>
