--- a/html/blanqueamiento.html
+++ b/html/blanqueamiento.html
@@ -10,13 +10,14 @@
 	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez C/ Marques de Paradas nº 22 1 º dcha Sevilla">
 	<link rel="stylesheet" href="css/patrodent.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="css/blanqueamiento.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
-	<script src="js/patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
-	<script src="js/blanqueamiento.js" type="text/javascript"></script>		<!--// Motion Script //-->
 </head>
 
 
-<body onload="if(IE||V5) OnWeLoad()">
+<body>
 <div id="page" class="page">
+    <h2 id="titulo2" class="titulo2 page_tag">
+        ESTETICA DENTAL. BLANQUEAMIENTO
+    </h2>
 	<span id="e30" class="header_box"></span>
 	<span id="e29" class="deco_superior"></span>
 	<span id="e28" class="navigation_box_superior"></span>
@@ -65,11 +66,6 @@
 	<span id="e14" class="telefono"></span>
 	<span id="e13" class="barra"></span>
 	<span id="e12" class="barra barra2"></span>
-	<a href="#" onmouseover="OnWeOver(0,0,0,IDP[1],Img11,0,1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img11,0,0)">
-		<img id="e11" name="e11" src="./images/b-norm2.gif" title="" alt="./images/b-norm2.gif" align="right" border="0"></a>
-	<div id="e10" class="cc69">
-		ESTETICA DENTAL. BLANQUEAMIENTO
-	</div>
 	<div id="e9" class="info">
 		El enfoque de este campo de la odontología es hacia la conservación de los dientes en la boca tratando de evitar la extracción. Cuando el diente ha sido agredido por una caries, se debe limpiar el tejido dañado y realizar una obturación. Cuando la profundidad de la lesión es desfavorable con respecto al nervio, nuestro tratamiento será realizar la endodoncia. Posteriormente, la pieza será reconstruida y en muchas ocasiones restaurada por una corona de porcelana.<br> 
 		Todos nuestros tratamientos, en éste como en los demás campos, persiguen conseguir el mejor resultado. En esta línea son llamativos los resultados que se consiguen con las técnicas de blanqueamiento dental.
