--- a/html/implantes.html
+++ b/html/implantes.html
@@ -10,12 +10,10 @@
 	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez C/ Marques de Paradas nº 22 1 º dcha Sevilla">
 	<link rel="stylesheet" href="css/patrodent.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="css/implantes.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
-	<script src="js/patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
-	<script src="js/implantes.js" type="text/javascript"></script>		<!--// Motion Script //-->
 </head>
 
 
-<body onload="if(IE||V5) OnWeLoad()">
+<body>
 <div id="page" class="page">
 	<span id="e30" class="header_box"></span>
 	<span id="e29" class="deco_superior"></span>
@@ -23,6 +21,9 @@
 	<span id="e27" class="deco_inferior"></span>
 	<span id="e26" class="navigation_box_inferior"></span>
 	<span id="e25" class="banner"></span>
+    <h2 id="titulo2" class="titulo2 page_tag">
+        IMPLANTES
+    </h2>
 	<h4 id="e24" class="page_tag telefono_valor">
 		954 211 422
 	</h4>
@@ -65,11 +66,6 @@
 	<span id="e14" class="telefono"></span>
 	<span id="e13" class="barra"></span>
 	<span id="e12" class="barra barra2"></span>
-	<a href="#" onmouseover="OnWeOver(0,0,0,IDP[1],Img11,0,1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img11,0,0)">
-		<img id="e11" name="e11" src="./images/b-norm2.gif" title="" alt="./images/b-norm2.gif" align="right" border="0"></a>
-	<div id="e10" class="cc112">
-		IMPLANTES
-	</div>
 	<div id="e9" class="info">
 		Los implantes dentales son fijaciones de titanio que se colocan en el maxilar o en la mandíbula para sustituir los dientes ausentes.<br> 
 		<br> 
