--- a/html/ortodoncia.html
+++ b/html/ortodoncia.html
@@ -10,13 +10,14 @@
 	<meta name="Description" content="Clinica Dental Patrocinio Gómez Martínez C/ Marques de Paradas nº 22 1 º dcha Sevilla">
 	<link rel="stylesheet" href="css/patrodent.css" type="text/css" media="screen,projection,print">	<!--// Document Style //-->
 	<link rel="stylesheet" href="css/ortodoncia.css" type="text/css" media="screen,projection,print">	<!--// Page Style //-->
-	<script src="js/patrodent_g.js" type="text/javascript"></script>		<!--// Document Script //-->
-	<script src="js/ortodoncia.js" type="text/javascript"></script>		<!--// Motion Script //-->
 </head>
 
 
-<body onload="if(IE||V5) OnWeLoad()">
+<body>
 <div id="page" class="page">
+    <h2 id="titulo2" class="titulo2 page_tag">
+        ORTODONCIA
+    </h2>
 	<span id="e31" class="header_box"></span>
 	<span id="e30" class="deco_superior"></span>
 	<span id="e29" class="navigation_box_superior"></span>
@@ -65,11 +66,6 @@
 	<span id="e15" class="telefono"></span>
 	<span id="e14" class="barra"></span>
 	<span id="e13" class="barra barra2"></span>
-	<a href="#" onmouseover="OnWeOver(0,0,0,IDP[1],Img12,0,1)" onmouseout="OnWeOver(0,0,0,IDP[1],Img12,0,0)">
-		<img id="e12" name="e12" src="./images/b-norm2.gif" title="" alt="./images/b-norm2.gif" align="right" border="0"></a>
-	<div id="e11" class="cc101">
-		ORTODONCIA
-	</div>
 	<div id="e10" class="info">
 		La ortodoncia es una especialidad de la odontología que se encarga de estudiar y corregir las malposiciones y maloclusiones dentarias, así como las alteraciones esqueléticas del maxilar y la mandíbula. La corrección de los dientes y de las bases óseas se realiza mediante una serie de aparatos fijos.(técnica multibraquets).<br> 
 		La ortodoncia no tiene edad límite de tratamiento. Los dientes se pueden corregir a cualquier edad. A los niños se les aconseja llevarlos al ortodoncista antes de los seis años para poder detectar alteraciones dentales o esqueléticas importantes de manera precoz y poder corregirlos fácilmente. Gracias a la ortodoncia podemos corregir una estética de la sonrisa muy satisfactoria y mejorar la imagen de cada persona.<br> 
