--- a/html/quien_soy.html
+++ b/html/quien_soy.html
@@ -20,7 +20,7 @@
 	<span id="e28" class="navigation_box navigation_box_superior"></span>
 	<span id="e27" class="deco deco_inferior"></span>
 	<span id="e26" class="navigation_box navigation_box_inferior"></span>
-	<h2 id="titulo2" class="page_tag">
+	<h2 id="titulo2" class="titulo2 page_tag">
 		Dra. Patrocinio Gómez Martínez
 	</h2>
 	<div id="e24" class="info">
